<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Terzulli File Manager</string>
    <string name="app_name_compact">File Manager</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_folder">New Folder</string>
    <string name="action_open_with">Open with…</string>
    <string name="action_sort_by">Sort by…</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_copy_to">Copy to…</string>
    <string name="action_move_to">Move to…</string>
    <string name="action_compress">Compress</string>
    <string name="action_decompress">Decompress</string>
    <string name="action_rename">Rename</string>
    <string name="action_get_info">Get info</string>
    <string name="action_show_hidden">Show hidden files</string>
    <string name="action_dont_show_hidden">Don\'t show hidden files</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_extract">Extract to…</string>
    <string name="action_clear_logs">Clear logs history</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_gallery">Gallery</string>
    <string name="drawer_menu_slideshow">Slideshow</string>
    <string name="drawer_menu_storage_sd_card">SD Card</string>
    <string name="drawer_menu_storage_internal">Internal Storage</string>
    <string name="drawer_menu_storage_external">USB Storage</string>
    <string name="drawer_menu_location">Locations</string>
    <string name="drawer_menu_logs">Logs</string>
    <string name="drawer_menu_advanced">Advanced</string>
    <string name="drawer_menu_download">Downloads</string>
    <string name="drawer_menu_recent">Recents</string>
    <string name="drawer_menu_media_images">Images</string>
    <string name="drawer_menu_media_videos">Videos</string>
    <string name="drawer_menu_media_audio">Audio</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_save">Save</string>
    <string name="button_paste">Paste</string>
    <string name="button_retry">Retry</string>
    <string name="button_extract">Extract</string>
    <string name="button_compress">Compress</string>
    <string name="button_show_logs">Show Logs</string>
    <string name="grant">Grant</string>
    <string name="grant_permission">Grant permission</string>
    <string name="grant_failed">Permission not granted</string>
    <string name="grant_failed_exit">Permission not granted. Closing…</string>
    <string name="grant_successed">Permission granted</string>
    <string name="grant_permission_msg_storage">The application needs storage permission to continue. Cancelling this dialog will quit the app.</string>
    <string name="grant_permission_msg_full_storage">Since Android 11, Google requests File Managers to ask users a specific permission for managing all the files on the device.
        \n\nAfter pressing "Grant", please select <b>"Allow access to manage all files" option on the next screen.</b>
        \n\n<i>Cancelling this dialog will quit the app.</i></string>
    <string name="grant_permission_msg_apk">The application needs permission to install the APK.</string>
    <string name="frag_no_items">No items</string>
    <string name="frag_no_logs">No logs</string>
    <string name="file_default_file_name">file.txt</string>
    <string name="file_default_details">Jen 1, 1 kB, JPG Image</string>
    <string name="file_item_icon_description">Item Icon</string>
    <string name="press_again_to_exit">Press again to exit app</string>
    <string name="unknown_file_bin">BIN file</string>
    <string name="cant_open_file">Can\'t open the file</string>
    <string name="selected_file_lowercase">selected</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_single_dir_first_part">Delete folder</string>
    <string name="delete_single_dir_second_part">and its contents?</string>
    <string name="delete_single_file">Delete</string>
    <string name="delete_multiple_dirs_first_part">Delete</string>
    <string name="delete_multiple_dirs_second_part">folders and their contents?</string>
    <string name="delete_multiple_files_first_part">Delete</string>
    <string name="delete_multiple_files_second_part">files?</string>
    <string name="delete_multiple_generic_first_part">Delete</string>
    <string name="delete_multiple_generic_second_part">items?</string>
    <string name="delete_toast_first_part">Deleting</string>
    <string name="delete_toast_single_second_part">item.</string>
    <string name="delete_toast_multiple_second_part">items.</string>
    <string name="action_copy">Copy</string>
    <string name="action_move">Move</string>
    <string name="action_copy_move_items">items</string>
    <string name="action_copy_move_item">item</string>
    <string name="action_copy_completed_first_part">Copy of</string>
    <string name="action_move_completed_first_part">Move of</string>
    <string name="action_copy_move_completed_second_part">items to</string>
    <string name="action_copy_move_completed_second_part_v2">items</string>
    <string name="action_copy_move_completed_third_part">completed</string>
    <string name="action_extract_here">Extract here</string>
    <string name="action_extract_completed">Extraction Completed</string>
    <string name="action_compress_completed">Compression Completed</string>
    <string name="action_copy_started">Copying…</string>
    <string name="action_move_started">Moving…</string>
    <string name="action_extraction_started">Extracting…</string>
    <string name="action_compression_started">Compressing…</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_descending">Descending</string>
    <string name="sort_name">Name</string>
    <string name="sort_size">Size</string>
    <string name="sort_date_last_modified">Last modified</string>
    <string name="prop_properties">Properties</string>
    <string name="prop_name">Name</string>
    <string name="prop_size">Name</string>
    <string name="prop_last_modified">Last Modified</string>
    <string name="prop_type">Type</string>
    <string name="prop_n_items">Number of items</string>
    <string name="zip_compression_started">Compressing the selected files…</string>
    <string name="zip_compression_completed">Compression completed</string>
    <string name="zip_extraction_started">Extracting the selected files…</string>
    <string name="zip_extraction_completed">Extraction completed</string>
    <string name="zip_insert_password_dialog_descr">The selected archive seems to be protected by a password.</string>
    <string name="zip_insert_password_dialog_insert">Password:</string>
    <string name="zip_protected">Protected Archive</string>
    <string name="intent_share_title">Share File</string>
    <string name="intent_share_subject">Sharing Files</string>
    <string name="intent_share_text">Attached files</string>
    <string name="log_op_type_new_folder">New Folder</string>
    <string name="log_op_type_compress">Compress</string>
    <string name="log_op_type_extract">Extract</string>
    <string name="log_op_type_copy">Copy</string>
    <string name="log_op_type_move">Move</string>
    <string name="log_op_type_rename">Rename</string>
    <string name="log_op_type_delete">Delete</string>
    <string name="log_op_type">Type</string>
    <string name="log_op_timestamp">Timestamp</string>
    <string name="log_op_result">Result</string>
    <string name="log_op_start_path">Origin path</string>
    <string name="log_op_dest_path">Destination path</string>
    <string name="log_op_new_name">New name</string>
    <string name="log_op_retried">Retried</string>
    <string name="log_op_retried_true">True</string>
    <string name="log_op_retried_false">False</string>
    <string name="log_op_number_of_items">Number of items</string>
    <string name="log_op_number_of_failed_items">Number of failed items</string>
    <string name="log_op_error_descr">Error description</string>
    <string name="log_op_items_list">Items list</string>
    <string name="log_op_items_failed_list">Failed items list</string>
    <string name="log_op_retry_operation">Retry the operation?</string>
    <string name="log_op_failed">Failed</string>
    <string name="log_op_success">Success</string>
    <string name="log_op_retried_successfully">Successfully retried the operation</string>
    <string name="log_op_retried_error">Error during the retry operation</string>
    <string name="log_op_clear_history_dialog">Do you want to clear the logs history? \n\nWarning: this operation cannot be undone</string>
    <string name="error_access_to_root_directory">You don\'t have to permission to access this location</string>
    <string name="error_generic">Something went wrong…</string>
    <string name="error_copy_move_same_location">Origin and destination location can\'t be the same</string>
    <string name="error_cannot_open_file_in_archive">Cannot open files in archives</string>
    <string name="error_package_install">There was a problem parsing the package</string>
    <string name="error_check_permissions">Please make sure you have granted the "File and media" permission to the application</string>
    <string name="error_check_password">Maybe the password was incorrect.</string>
    <string name="error_check_password_not_supported">The extraction of archives protected by a password is unsopported</string>
    <string name="error_cannot_rename">Could not rename the selected item</string>
    <string name="error_cannot_create_folder">Could not create a folder with this name</string>
    <string name="error_cannot_delete_item">Could not delete the specified item</string>
    <string name="error_compression_cannot_compress_file">Could not compress some of the specified items</string>
    <string name="error_extraction_cannot_create_dest_dir">Could not create the destination folder</string>
    <string name="error_extraction_cannot_create_dest_file">Could not create the destination file</string>
    <string name="error_extraction_cannot_complete">Something went wrong during the extraction operation</string>
    <string name="error_copy_generic">Something went wrong during the copy operation</string>
    <string name="error_move_generic">Something went wrong during the move operation</string>
    <string name="error">Error</string>
    <string name="error_cant_do_here">You cannot perform this operation here</string>
    <string name="error_cannot_copy_into_itself">Can\'t copy a folder into itself</string>
    <string name="error_cannot_move_into_itself">Can\'t copy a folder into itself</string>
    <string name="error_cannot_compress_into_itself">Can\'t compress a folder into itself</string>
    <string name="error_rename_not_exists">The item that you\'re trying to rename does not exist</string>
    <string name="number_placeholder">10</string>
    <string name="string_placeholder_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet fringilla urna. Fusce consequat vehicula volutpat. Ut dictum elit nibh, sit amet hendrerit odio molestie eleifend. Maecenas viverra tempor tortor, ac dignissim nibh ornare eu.</string>
</resources>