<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recents"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/drawer_menu_recent" />
        <item
            android:id="@+id/nav_images"
            android:icon="@drawable/ic_menu_image"
            android:title="@string/drawer_menu_media_images" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/drawer_menu_media_videos" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_music_note"
            android:title="@string/drawer_menu_media_audio" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_menu_file_download"
            android:title="@string/drawer_menu_download" />



        <item android:title="@string/drawer_menu_location">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_internal_storage"
                        android:icon="@drawable/ic_menu_smartphone"
                        android:title="@string/drawer_menu_storage_internal" />
                    <item
                        android:id="@+id/nav_sd_card"
                        android:icon="@drawable/ic_menu_sd_card"
                        android:title="@string/drawer_menu_storage_sd_card" />
                    <item
                        android:id="@+id/nav_external_storage"
                        android:icon="@drawable/ic_menu_usb"
                        android:title="@string/drawer_menu_storage_external" />
                </group>
            </menu>
        </item>
    </group>
</menu>