<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recents">

    <fragment
        android:id="@+id/nav_recents"
        android:name="com.terzulli.terzullifilemanager.ui.fragments.home.HomeFragment"
        android:label="@string/drawer_menu_recent"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_images"
        android:name="com.terzulli.terzullifilemanager.ui.fragments.home.HomeFragment"
        android:label="@string/drawer_menu_recent"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_videos"
        android:name="com.terzulli.terzullifilemanager.ui.fragments.home.HomeFragment"
        android:label="@string/drawer_menu_recent"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_audio"
        android:name="com.terzulli.terzullifilemanager.ui.fragments.home.HomeFragment"
        android:label="@string/drawer_menu_recent"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_download"
        android:name="com.terzulli.terzullifilemanager.ui.fragments.home.HomeFragment"
        android:label="@string/drawer_menu_recent"
        tools:layout="@layout/fragment_home" />

    <!-- vecchi -->

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.terzulli.terzullifilemanager.ui.fragments.gallery.GalleryFragment"
        android:label="@string/drawer_menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.terzulli.terzullifilemanager.ui.fragments.slideshow.SlideshowFragment"
        android:label="@string/drawer_menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>